# CarrionEngine

./: .gitignore  README.md  package-lock.json  package.json
lib/: index.js
native/: Cargo.toml
native/src/: lib.rs
native/src/engine/: components.rs  ecs.rs  mod.rs  resources.rs  systems.rs
native/src/materials/: bone.toml  bronze.toml  cloth.toml  copper.toml  flesh.toml  iron.toml  materialRead.rs  mod.rs  stone.toml  wood.toml
native/src/settings/: controls.rs  keyBindings.toml
