[package]
name = "carrion-engine"
version = "0.1.0"
authors = ["dj"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "carrion_engine"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
specs = "0.15.0"
rouler = "0.1.3"
toml = "0.5.1"
serde={ version = "1.0.97", features = ["derive"] }
